Fixes off-centeredness in all browsers but IE9

--- a/static/stylesheets/ie.css
+++ b/static/stylesheets/ie.css
@@ -12,6 +12,14 @@
 }
 
 @media (min-width: 651px) {
+  .inner {
+    width: 600px;
+  }
+
+  .wrapped {
+    width: 100%;
+  }
+
   form {
     display: block;
   }
